--- a/Demo26-1.html
+++ b/Demo26-1.html
@@ -15,15 +15,19 @@
         const app = Vue.createApp({
             data() {
                 return {
-                    inputValue: ''
-                };
-            },
-            methods: {
-                handleKeyDown() {
-                    console.log('keydown');
+                    name: 123
                 }
             },
-            template: `<input @keydown.enter="handleKeyDown"/>`
+            template: `<h2>技术胖</h2>
+            <Son name="jspang"/>
+            <hr>
+            <Son :name="name" />
+            `
+        })
+
+        app.component('Son', {
+            props: ['name'],
+            template: `{{ typeof name }}--{{ name }} Div`
         })
         const vm = app.mount("#app")
     </script>
