--- a/Demo28.html
+++ b/Demo28.html
@@ -15,16 +15,25 @@
         const app = Vue.createApp({
             data() {
                 return {
-                    inputValue: ''
+                    counter: 0
                 };
             },
-            methods: {
-                handleKeyDown() {
-                    console.log('keydown');
+            template: `
+            <h2>jspang.com</h2>
+            <Counter :counter="counter"/>
+            `
+        })
+
+        app.component("Counter", {
+            props: ['counter'],
+            data() {
+                return {
+                    newCounter: this.counter
                 }
             },
-            template: `<input @keydown.enter="handleKeyDown"/>`
+            template: `{{ newCounter }}<button @click="this.newCounter++">增加1</button>`
         })
+
         const vm = app.mount("#app")
     </script>
 </body>
